--- a/CO2_emission_questions.ipynb
+++ b/CO2_emission_questions.ipynb
@@ -5,7 +5,7 @@
    "id": "25f4ee50-e40f-4d37-bc92-fa4ff46e305e",
    "metadata": {},
    "source": [
-    "## How can YOU reduce your carbon footprint after COP 26? Show me the data.\n",
+    "## How can you reduce your carbon footprint after COP 26? \n",
     "\n",
     "1.\tWhich products contribute the most to your UK carbon emission footprint? (and which products are most important for predicting the UK carbon footprint?)\n",
     "2.\tWhere do these products come from globally? \n",
@@ -45,43 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 1,
    "id": "c0a8eac8-808c-4122-b9d7-9894631e19bf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'Food', 'Non-alcoholic beverages', 'Alcoholic beverages',\n",
-       "       'Tobacco', 'Clothing', 'Footwear', 'Actual rentals for households',\n",
-       "       'Imputed rentals for households',\n",
-       "       'Maintenance and repair of the dwelling',\n",
-       "       'Water supply and miscellaneous dwelling services',\n",
-       "       'Electricity, gas and other fuels',\n",
-       "       'Furniture, furnishings, carpets etc', 'Household textiles',\n",
-       "       'Household appliances', 'Glassware, tableware and household utensils',\n",
-       "       'Tools and equipment for house and garden',\n",
-       "       'Goods and services for household maintenance',\n",
-       "       'Medical products, appliances and equipment', 'Hospital services',\n",
-       "       'Purchase of vehicles', 'Operation of personal transport equipment',\n",
-       "       'Transport services', 'Postal services',\n",
-       "       'Telephone and telefax equipment', 'Telephone and telefax services',\n",
-       "       'Audio-visual, photo and info processing equipment',\n",
-       "       'Other major durables for recreation and culture',\n",
-       "       'Other recreational equipment etc',\n",
-       "       'Recreational and cultural services',\n",
-       "       'Newspapers, books and stationery', 'Education',\n",
-       "       'Restaurants and hotels', 'Miscellaneous goods and services', 'Total'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 241,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "CO2_products.columns"
+    "#CO2_products.columns"
    ]
   },
   {
@@ -1383,7 +1352,7 @@
    "id": "670c4f33-c275-4a40-87ac-b12ba5035616",
    "metadata": {},
    "source": [
-    "### How can YOU reduce your carbon footprint?\n",
+    "### How can you reduce your carbon footprint?\n",
     "\n",
     "From this data,\n",
     " - Reduce energy consumption and travel less\n",
