--- a/CO2_emission_questions.ipynb
+++ b/CO2_emission_questions.ipynb
@@ -5,16 +5,24 @@
    "id": "25f4ee50-e40f-4d37-bc92-fa4ff46e305e",
    "metadata": {},
    "source": [
-    "## How can you reduce your carbon footprint after COP 26? \n",
+    "## How can you reduce your carbon footprint after COP26? \n",
     "\n",
+    "### Business Understanding\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9e200fe-0b46-44f8-99d9-75e6bc59c8e8",
+   "metadata": {},
+   "source": [
     "1.\tWhich products contribute the most to your UK carbon emission footprint? (and which products are most important for predicting the UK carbon footprint?)\n",
     "2.\tWhere do these products come from globally? \n",
-    "3.\tIs there a change over time in where products come from overall and for individual products? \n"
+    "3.\tIs there a change over time in where products come from overall and for individual products? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "e5fe51e8-7295-419e-901f-e15dceac9f13",
    "metadata": {},
    "outputs": [],
@@ -31,12 +39,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2a1665a-cf69-416f-88bd-6c1b1582056a",
+   "metadata": {},
+   "source": [
+    "### Data Understanding"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "da2c1f65-2a53-4842-aa63-381e6c70b8be",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#sourcing the most relevant data:\n",
     "full_df = pd.read_excel('Data/---Consumption_emissions_March_21_final_accessible_rev.xlsx', sheet_name=None) #all data\n",
     "#data source: https://www.gov.uk/government/statistics/uks-carbon-footprint\n",
     "CO2_source = pd.read_excel('Data/CO2_emissions_source_region_1990_2018_KTonnes.xlsx') #summed over all products\n",
@@ -51,6 +68,14 @@
    "outputs": [],
    "source": [
     "#CO2_products.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cacc628a-3d63-480a-9950-12aefd64a912",
+   "metadata": {},
+   "source": [
+    "### Prepare data"
    ]
   },
   {
@@ -92,6 +117,14 @@
    "outputs": [],
    "source": [
     "def changing_colour_for_top_contributors(contrib_df, df_feature_import):\n",
+    "    \"\"\"\n",
+    "    A function to change the plot colours depending if the products are top contributors of CO2 emissions.\n",
+    "    If a product is within the top 10 contributors it's marked in red, otherwise marked in green.\n",
+    "    \n",
+    "    INPUT: df of the top contributing products (contrib_df) and df of all products (df_feature_import)\n",
+    "    OUTPUT: A list of colours in the same order as the df of all products. \n",
+    "    \"\"\"\n",
+    "    \n",
     "    top_contrib_list = list(contrib_df['Product'].head(10))\n",
     "    all_products = list(df_feature_import['Product'])\n",
     "\n",
@@ -328,6 +361,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af40221f-663b-4470-8e67-8429ed8d3e7b",
+   "metadata": {},
+   "source": [
+    "### Data Modelling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 305,
    "id": "b2a588a4-34fe-4879-aba8-baaf0260ae8c",
@@ -430,23 +471,22 @@
     "       \n",
     "ax = df_feature_import.plot(kind='barh', y='Importance', x='Product',figsize=(6,10),legend='',color=all_colours)\n",
     "ax.set_xlabel(\"Importance for carbon emission prediction (%)\")\n",
-    "plt.savefig('Plots/feature_impor_predict_carbon_emission.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig('Plots/feature_impor_predict_carbon_emission.png', dpi=300, bbox_inches='tight')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e807acb8-ae8a-4177-935d-44d02c8d2d61",
+   "metadata": {},
+   "source": [
+    "Ridge regression highly ranks a lot of the top contributors of carbon emissions (as highlighted in red) in its prediction therefore we can trust & understand the prediction. Although the score is very high (~0.97) can we improve it using Grid Search? \n",
     "\n",
-    "#Ridge regression highly ranks a lot of the top contributors of carbon emissions (as highlighted in red) in its prediction \n",
-    "#therefore we can trust & understand the prediction\n"
+    "We minimise the generalisation error (i.e. minimising the error between the training and test data (overfitting) by considering the bias-variance tradeoff using GridSearchCV."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9640359d-1e58-4670-b340-4b7a0a211d1f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 4,
    "id": "3aa26ecd-2ad8-4d98-844f-49c32760448f",
    "metadata": {},
    "outputs": [
@@ -462,11 +502,6 @@
     }
    ],
    "source": [
-    "#Although the score is very high (~0.97) can we improve it using Grid Search? \n",
-    "\n",
-    "#We minimise the generalisation error (i.e. minimising the error between the training \n",
-    "#and test data (overfitting) by considering the bias-variance tradeoff using GridSearchCV.\n",
-    "  \n",
     "from sklearn.model_selection import GridSearchCV\n",
     "param_grid = {'alpha': np.logspace(-2, 7, 14)}\n",
     "print(param_grid)"
@@ -519,7 +554,6 @@
     }
    ],
    "source": [
-    "\n",
     "plt.figure(dpi=100)\n",
     "results = pd.DataFrame(grid.cv_results_)\n",
     "results.plot('param_alpha', 'mean_train_score', ax=plt.gca(),c='royalblue')\n",
@@ -628,19 +662,16 @@
     "all_colours = changing_colour_for_top_contributors(contrib_df, df_feature_import)\n",
     "\n",
     "ax = df_feature_import.plot(kind='barh', y='Importance', x='Product',figsize=(6,10),legend='',color=all_colours)\n",
-    "ax.set_xlabel(\"Importance for carbon emission prediction (%)\")\n",
-    "\n",
-    "#Lasso reduces the importance of a lot of the predictors and focuses on Tobacco and Footwear. \n",
-    "#These are amongst the lowest contributors to carbon emissions therefore it is suggested Lasso prediction is not a reliable method here."
+    "ax.set_xlabel(\"Importance for carbon emission prediction (%)\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40138399-b9d0-4815-a69c-e528a820797b",
+   "cell_type": "markdown",
+   "id": "28accad0-d1e2-4b99-8be7-2fb33511c0d6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Lasso reduces the importance of a lot of the predictors and focuses on Tobacco and Footwear. These are amongst the lowest contributors to carbon emissions therefore it is suggested Lasso prediction is not a reliable method here."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -648,6 +679,14 @@
    "metadata": {},
    "source": [
     "## Question 2 - Where do the top contributors to UK carbon emissions come from globally?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6c17027-bf1c-4544-a85f-7da62a78a6a3",
+   "metadata": {},
+   "source": [
+    "### Prepare Data"
    ]
   },
   {
@@ -1107,7 +1146,12 @@
    ],
    "source": [
     "def make_bar_chart_of_emission_source_for_single_product(source_of_top_contrib, product_name):\n",
+    "    \"\"\"\n",
+    "    A function to make a bar chart of the source of the CO2 emission by geographical location for a specified product.\n",
+    "    INPUT: A df of the top contributing products (source_of_top_contrib) and the product name.\n",
+    "    OUTPUT: A saved figure of the bar chart.\n",
     "    \n",
+    "    \"\"\"\n",
     "    data = source_of_top_contrib[[product_name,'Country']].sort_values(by=product_name)\n",
     "    ax = data.plot(kind='bar',y=product_name, x='Country', figsize=(5,5),legend='',color=colour_ranking)\n",
     "    ax.set_ylabel(\"2018 CO2 emissions (KTonnes)\")\n",
@@ -1121,6 +1165,14 @@
     "for product_name in range(len(top_contrib_list)):\n",
     "    \n",
     "    make_bar_chart_of_emission_source_for_single_product(source_of_top_contrib, top_contrib_list[product_name])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa86974c-53e3-4f8a-9a7a-6c691b4682d4",
+   "metadata": {},
+   "source": [
+    "### Evaluate the Results"
    ]
   },
   {
@@ -1185,6 +1237,14 @@
    "metadata": {},
    "source": [
     "## Question 3 - Does the source of the top contributing products to carbon emissions change over time? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2e5ae16-d524-40b9-a152-db3a243ab9d4",
+   "metadata": {},
+   "source": [
+    "### Prepare Data"
    ]
   },
   {
@@ -1308,8 +1368,13 @@
    ],
    "source": [
     "\n",
-    " def make_bar_chart_of_emission_source_for_single_product(source_of_top_contrib_2018, source_of_top_contrib_1990, product_name):\n",
+    " def make_bar_chart_of_diff_in_emission_source(source_of_top_contrib_2018, source_of_top_contrib_1990, product_name):\n",
+    "    \"\"\"\n",
+    "    A function to make a bar chart showing the difference in CO2 emissions from 1990 to 2018 for a single product.\n",
     "    \n",
+    "    INPUT: A dataframe of the CO2 emissions from each source location of the specified product in 2018 and in 1990, and the product name.\n",
+    "    OUTPUT: A saved figure of the bar chart for a single product\n",
+    "    \"\"\"\n",
     "    df_source_2018_min_1990 = pd.DataFrame()\n",
     "    df_source_2018_min_1990['Emission_diff'] = source_of_top_contrib_2018[product_name] - source_of_top_contrib_1990[product_name]\n",
     "    df_source_2018_min_1990['Country'] = source_of_top_contrib_2018['Country']\n",
@@ -1334,7 +1399,15 @@
     "\n",
     "for product_name in range(len(top_contrib_list)):\n",
     "    \n",
-    "    make_bar_chart_of_emission_source_for_single_product(source_of_top_contrib_2018, source_of_top_contrib_1990, top_contrib_list[product_name])"
+    "    make_bar_chart_of_diff_in_emission_source(source_of_top_contrib_2018, source_of_top_contrib_1990, top_contrib_list[product_name])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50851bdb-7aad-4dcf-91d4-d03160f5aa45",
+   "metadata": {},
+   "source": [
+    "### Evaluate the Results"
    ]
   },
   {
